force-app/main/default/objects/EXUS__EXUSSettings__c/EXUS__EXUSSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Provides ability to specify custom implementations for use with Factory classes.</description>
    <label>Experian US Consumer - Settings</label>
</CustomObject>