force-app/main/default/objects/EXUS__EXUSSettings__c/fields/EXUS__CreditPassReviewFlow__c.field-meta.xml
<CustomField>
    <fullName>EXUS__CreditPassReviewFlow__c</fullName>
    <description>This system property contains the name of the Credit Pass Review flow. On installation, administrators enter the API name of the credit pass review flow that they want to use.</description>
    <label>Credit Pass Review Flow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>