force-app/main/default/objects/EXUS__EXUSSettings__c/fields/EXUS__LoggingProvider__c.field-meta.xml
<CustomField>
    <fullName>EXUS__LoggingProvider__c</fullName>
    <description>The fully qualified name of the logging provider implementing the EFPIO.ILoggingProvider_v1 interface.</description>
    <label>Logging Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>