force-app/main/default/objects/EXUS__EXUSSettings__c/fields/EXUS__NamedCredentialOrEndpoint__c.field-meta.xml
<CustomField>
    <fullName>EXUS__NamedCredentialOrEndpoint__c</fullName>
    <description>Administrators populate this required text field with the named credential or endpoint that facilitates a callout to Experian Consumer. By default it is blank.</description>
    <label>Named Credential or Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>