force-app/main/default/objects/EXUS__EXUSSettings__c/fields/EXUS__StoreResponses__c.field-meta.xml
<CustomField>
    <fullName>EXUS__StoreResponses__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The administrator toggles this optional textbox to configure whether or not the response is stored.</description>
    <label>Store Responses</label>
    <type>Checkbox</type>
</CustomField>